--- a/kola2012.html
+++ b/kola2012.html
@@ -171,7 +171,19 @@
             <li class="link ulchildlink"><strong>
                 <a href="kola2012.sea.html">По Белому морю</a>
               </strong><br>
-Морская часть похода от мыса Святой Нос до села Сосновка</li></ul></div></div>
+Морская часть похода от мыса Святой Нос до села Сосновка</li></ul></div>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+                                var disqus_shortname = "teux",
+                                    disqus_identifier = "kola2012",
+                                    disqus_url = "http://www.teux.ru/kola2012.html";
+                                (function() {
+                                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                                })();
+                            </script>
+      </div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
