Discus threads added

--- a/dakota.datum.html
+++ b/dakota.datum.html
@@ -28,7 +28,7 @@
 
 
 
-  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="id105TJ0P20Y4">
+  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="dakota.datum">
     <div id="container">
       <div id="branding">
         <h1>
@@ -349,7 +349,19 @@ NIMA усредненно более подходят для всей обшир
 в Dakota смещение 16500000, но увы, навигатор перестанет показывать
 координаты. Для такого листа можно задать смещение 6500000. Тогда
 координата определится как E6372000, то есть старшей единички не
-будет. Но все же это удобнее для поиска координаты на карте.</p></div></div></div>
+будет. Но все же это удобнее для поиска координаты на карте.</p></div></div>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+                                var disqus_shortname = "teux",
+                                    disqus_identifier = "dakota.datum",
+                                    disqus_url = "http://www.teux.ru/dakota.datum.html";
+                                (function() {
+                                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                                })();
+                            </script>
+      </div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
