--- a/dakota.maps.basecamp.html
+++ b/dakota.maps.basecamp.html
@@ -140,7 +140,19 @@
                 </p>
                 <p class="p">Отображается список <span class="ph uicontrol">Выбрать пункт назначения</span>.</p>
                 <img class="image" src="Insets/dakota/bc2.png"></li>
-              <li class="li">В группе <span class="ph uicontrol">Устройства</span> выберите «Встроенная память» или «Данные пользователя» и нажмите <span class="ph uicontrol">OK</span>.</li></ol></div></div></div>
+              <li class="li">В группе <span class="ph uicontrol">Устройства</span> выберите «Встроенная память» или «Данные пользователя» и нажмите <span class="ph uicontrol">OK</span>.</li></ol></div></div>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+                                var disqus_shortname = "teux",
+                                    disqus_identifier = "dakota.maps.basecamp",
+                                    disqus_url = "http://www.teux.ru/dakota.maps.basecamp.html";
+                                (function() {
+                                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                                })();
+                            </script>
+      </div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
