--- a/dakota.maps.sas.html
+++ b/dakota.maps.sas.html
@@ -28,7 +28,7 @@
 
 
 
-  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="id107CL0HL05Z">
+  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="dakota.maps.sas">
     <div id="container">
       <div id="branding">
         <h1>
@@ -207,7 +207,19 @@
             <li class="li">
               <p class="p">Нажмите <strong class="ph b">Начать</strong>.</p></li></ol>
           <p class="p">Программа начнет склеивать ранее загруженные фрагменты
-карты в единое изображение, а затем создаст файл kmz.</p></div></div>
+карты в единое изображение, а затем создаст файл kmz.</p></div>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+                                var disqus_shortname = "teux",
+                                    disqus_identifier = "dakota.maps.sas",
+                                    disqus_url = "http://www.teux.ru/dakota.maps.sas.html";
+                                (function() {
+                                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                                })();
+                            </script>
+      </div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
