--- a/dakota.mapsource.html
+++ b/dakota.mapsource.html
@@ -28,7 +28,7 @@
 
 
 
-  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="id105VII0G05Z">
+  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="dakota.mapsource">
     <div id="container">
       <div id="branding">
         <h1>
