--- a/lapland.html
+++ b/lapland.html
@@ -250,7 +250,19 @@
             <li class="link ulchildlink"><strong>
                 <a href="lapland.charge.html">Расходы</a>
               </strong><br>
-Расходы на дорогу, проживание, питание и прочие</li></ul></div></div>
+Расходы на дорогу, проживание, питание и прочие</li></ul></div>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+                                var disqus_shortname = "teux",
+                                    disqus_identifier = "lapland",
+                                    disqus_url = "http://www.teux.ru/lapland.html";
+                                (function() {
+                                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                                })();
+                            </script>
+      </div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
