--- a/whitesea2010.html
+++ b/whitesea2010.html
@@ -28,7 +28,7 @@
 
 
 
-  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="id107AD0R305Z">
+  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="whitesea2010">
     <div id="container">
       <div id="branding">
         <h1>
@@ -1344,7 +1344,19 @@
               <strong>
                 <a href="whitesea2010.photo.html">Фотографии</a>
               </strong>
-              <br></li></ul></div></div>
+              <br></li></ul></div>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+                                var disqus_shortname = "teux",
+                                    disqus_identifier = "whitesea2010",
+                                    disqus_url = "http://www.teux.ru/whitesea2010.html";
+                                (function() {
+                                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                                })();
+                            </script>
+      </div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
