--- a/calga_.html
+++ b/calga_.html
@@ -325,7 +325,19 @@
             <li class="link ulchildlink"><strong>
                 <a href="calga14.html">День 14</a>
               </strong><br>
-Пос. Поньгома – Антистапель – пос. Кузёма</li></ul></div></div>
+Пос. Поньгома – Антистапель – пос. Кузёма</li></ul></div>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+                                var disqus_shortname = "teux",
+                                    disqus_identifier = "calga_",
+                                    disqus_url = "http://www.teux.ru/calga_.html";
+                                (function() {
+                                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                                })();
+                            </script>
+      </div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
