--- a/dakota.maps.html
+++ b/dakota.maps.html
@@ -28,7 +28,7 @@
 
 
 
-  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="id105TJ0UM0HS">
+  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="dakota.maps">
     <div id="container">
       <div id="branding">
         <h1>
@@ -227,7 +227,19 @@ Zip или 7z. Внутри архива содержатся фрагменты
             <li class="link ulchildlink"><strong>
                 <a href="dakota.maps.scale.html">Карты в разных масштабах</a>
               </strong><br>
-Расположение карт одна над другой с помощью параметра drawOrder</li></ul></div></div>
+Расположение карт одна над другой с помощью параметра drawOrder</li></ul></div>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+                                var disqus_shortname = "teux",
+                                    disqus_identifier = "dakota.maps",
+                                    disqus_url = "http://www.teux.ru/dakota.maps.html";
+                                (function() {
+                                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                                })();
+                            </script>
+      </div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
