--- a/vincha.html
+++ b/vincha.html
@@ -240,7 +240,19 @@
             <li class="link ulchildlink"><strong>
                 <a href="vincha15.html">День 15</a>
               </strong><br>
-Окончание похода, антистапель, сброска</li></ul></div></div>
+Окончание похода, антистапель, сброска</li></ul></div>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+                                var disqus_shortname = "teux",
+                                    disqus_identifier = "vincha",
+                                    disqus_url = "http://www.teux.ru/vincha.html";
+                                (function() {
+                                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                                })();
+                            </script>
+      </div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
