--- a/kola2013.html
+++ b/kola2013.html
@@ -94,8 +94,7 @@
         </div>
         <h1 class="title topictitle1">Восточная Лица</h1>
         <div class="body photoBody">
-          <p class="shortdesc">Поход по Кольскому п-ову и Баренцеву морю 28 июля — 9 августа 2013 г.</p>
-          <p class="p">Отчет в разработке</p></div>
+          <p class="shortdesc">Поход по Кольскому п-ову и Баренцеву морю 28 июля — 9 августа 2013 г.</p></div>
         <p class="toc">В этом разделе</p>
         <div class="related-links">
           <ul class="ullinks">
@@ -108,7 +107,19 @@
               <strong>
                 <a href="kola2013.photo.html">Фотографии похода</a>
               </strong>
-              <br></li></ul></div></div>
+              <br></li></ul></div>
+        <div id="disqus_thread"></div>
+        <script type="text/javascript">
+                                var disqus_shortname = "teux",
+                                    disqus_identifier = "kola2013",
+                                    disqus_url = "http://www.teux.ru/kola2013.html";
+                                (function() {
+                                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                                })();
+                            </script>
+      </div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
