Отчет о походе на Вост. Лицу

--- a/dakota.maps.mapc.html
+++ b/dakota.maps.mapc.html
@@ -193,19 +193,7 @@ vertical</strong>, чтобы установить оптимальное кол
 и с расширением <samp class="ph codeph">kmz</samp>.</p></li></ol>
           <p class="p">Полученный файл <samp class="ph codeph">kmz</samp> нужно записать на съемную
 карту памяти навигатора в каталог <samp class="ph codeph">Garmin\CustomMaps</samp>.
-После включения Dakota растровая карта будет отображаться под векторной.</p></div>
-        <div id="disqus_thread"></div>
-        <script type="text/javascript">
-                                var disqus_shortname = "teux",
-                                    disqus_identifier = "id107AC400X5Z",
-                                    disqus_url = "http://www.teux.ru/id107AC400X5Z.html";
-                                (function() {
-                                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-                                })();
-                            </script>
-      </div>
+После включения Dakota растровая карта будет отображаться под векторной.</p></div></div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
