--- a/dakota.maps.scale.html
+++ b/dakota.maps.scale.html
@@ -134,19 +134,7 @@
                   <img class="image" id="dakota.maps.scale__image_hoq_ows_db" src="Insets/dakota/draworder.png"></div></li>
               <li class="li">Сохраните и закройте файл <samp class="ph codeph">doc.kml</samp>. Архиватор 7z спросит о необходимости обновить файл в архиве. Ответьте <strong class="ph b">OK</strong>.</li></ol>
             <p class="p">Теперь можно загружать карту в навигатор. У всех загруженных карт параметры
-     <samp class="ph codeph">drawOrder</samp> должны отличаться, иначе навигатор сообщит об ошибке.</p></div></div>
-        <div id="disqus_thread"></div>
-        <script type="text/javascript">
-                                var disqus_shortname = "teux",
-                                    disqus_identifier = "dakota.maps.scale",
-                                    disqus_url = "http://www.teux.ru/dakota.maps.scale.html";
-                                (function() {
-                                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                                dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-                                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-                                })();
-                            </script>
-      </div>
+     <samp class="ph codeph">drawOrder</samp> должны отличаться, иначе навигатор сообщит об ошибке.</p></div></div></div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
