--- a/kola.html
+++ b/kola.html
@@ -115,7 +115,7 @@
             <li class="link ulchildlink"><strong>
                 <a href="kola2013.html">Восточная Лица</a>
               </strong><br>
-Поход по Кольскому п-ову и Баренцеву морю 28 июля — 9 августа 2013 г.</li></ul></div></div>
+Поход по Кольскому п-ову и Баренцеву морю с 28 июля по 10 августа 2013 г.</li></ul></div></div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
