--- a/kola2013.photo.html
+++ b/kola2013.photo.html
@@ -104,24 +104,14 @@
                   <tr>
                     <td>
                       <p class="camera">
-                        <a title="Полный размер" target="_blank" href="http://img-fotki.yandex.ru/get/9299/101174408.a/0_998bf_1903d6cc_orig.jpg">
-                          <img src="images/camera.gif">
-                        </a>
-                      </p>
-                      <a href="http://img-fotki.yandex.ru/get/9299/101174408.a/0_998bf_1903d6cc_XL.jpg" rel="cbgroup" title="Фотографии похода">
-                        <img class="photo" src="http://img-fotki.yandex.ru/get/9299/101174408.a/0_998bf_1903d6cc_L.jpg">
-                      </a>
-                    </td></tr>
-                  <tr>
-                    <td>
-                      <p class="camera">
                         <a title="Полный размер" target="_blank" href="http://img-fotki.yandex.ru/get/6703/101174408.9/0_99874_4471bb9_orig.jpg">
                           <img src="images/camera.gif">
                         </a>
                       </p>
-                      <a href="http://img-fotki.yandex.ru/get/6703/101174408.9/0_99874_4471bb9_XL.jpg" rel="cbgroup" title="Фотографии похода">
+                      <a href="http://img-fotki.yandex.ru/get/6703/101174408.9/0_99874_4471bb9_XL.jpg" rel="cbgroup" title="Владимир Суржиков">
                         <img class="photo" src="http://img-fotki.yandex.ru/get/6703/101174408.9/0_99874_4471bb9_L.jpg">
                       </a>
+                      <p class="photoTitle">Владимир Суржиков</p>
                     </td></tr>
                   <tr>
                     <td>
@@ -130,9 +120,10 @@
                           <img src="images/camera.gif">
                         </a>
                       </p>
-                      <a href="http://img-fotki.yandex.ru/get/6703/101174408.a/0_998bd_976a59fc_XL.jpg" rel="cbgroup" title="Фотографии похода">
+                      <a href="http://img-fotki.yandex.ru/get/6703/101174408.a/0_998bd_976a59fc_XL.jpg" rel="cbgroup" title="Александр Краснов">
                         <img class="photo" src="http://img-fotki.yandex.ru/get/6703/101174408.a/0_998bd_976a59fc_L.jpg">
                       </a>
+                      <p class="photoTitle">Александр Краснов</p>
                     </td></tr>
                   <tr>
                     <td>
@@ -141,9 +132,10 @@
                           <img src="images/camera.gif">
                         </a>
                       </p>
-                      <a href="http://img-fotki.yandex.ru/get/9826/101174408.a/0_998be_ffe87ade_XL.jpg" rel="cbgroup" title="Фотографии похода">
+                      <a href="http://img-fotki.yandex.ru/get/9826/101174408.a/0_998be_ffe87ade_XL.jpg" rel="cbgroup" title="Андрей Коперский">
                         <img class="photo" src="http://img-fotki.yandex.ru/get/9826/101174408.a/0_998be_ffe87ade_L.jpg">
                       </a>
+                      <p class="photoTitle">Андрей Коперский</p>
                     </td></tr></tbody>
               </table>
             </div>
@@ -946,11 +938,11 @@
         <ul id="quick_links"></ul>
         <h3>Language Links</h3>
         <ul id="inner_navigation">
-          <li class="first"><strong>Вперед:</strong>нет</li>
-          <li>
-            <strong>Назад:</strong>
-            <a href="kola2013.stat.html">Статистика</a>
+          <li class="first">
+            <strong>Вперед:</strong>
+            <a href="kola2013.story.html">Отчет</a>
           </li>
+          <li><strong>Назад:</strong>нет</li>
           <li class="last">
             <strong>Вверх:</strong>
             <a href="kola2013.html">Восточная Лица</a>
