--- a/kola2013.stat.html
+++ b/kola2013.stat.html
@@ -21,8 +21,8 @@
 				  $("a[rel='slideshow']").colorbox({slideshow:"true", slideshowAuto:"true", slideshowSpeed:"4000", slideshowStart:"Начать показ", slideshowStop:"Остановить показ", current:"фото {current} из {total}", width:"70%"});
 			  });
 		  </script>
-    <script type="text/javascript" src="arrays/ltocent3.js"></script>
-    <script type="text/JavaScript">window.pageid = "kola2013.stat.html";</script>
+    <script type="text/javascript" src="arrays/ltocent1.js"></script>
+    <script type="text/JavaScript">window.pageid = "";</script>
     <link rel="Shortcut Icon" type="image/ico" href="images/favicon.ico">
   </head>
 
@@ -45,7 +45,7 @@
           <li>
             <a href="river.html" onmouseover="dropdownmenu(this, event, menu2ent , '')" onmouseout="delayhidemenu()">Водные</a>
           </li>
-          <li class="current">
+          <li>
             <a href="kola.html" onmouseover="dropdownmenu(this, event, menu3ent , '')" onmouseout="delayhidemenu()">Кольский п-ов</a>
           </li>
           <li>
@@ -78,18 +78,15 @@
         </ul>
       </div>
       <div id="dashboard">
-        <div id="navigation_secondary">
-          <p class="title">Разделы:</p>
-          <div id="ltoc">
-            <script type="text/JavaScript">window.jstree = new MakeTree(window.TITEMS, false);</script>
-          </div>
-        </div>
+        <div id="navigation_secondary"></div>
         <script type="text/javascript" src="arrays/lastpub.js"></script>
         <script type="text/javascript" src="arrays/dashboard.js"></script>
       </div>
       <div id="content_main" class="with-info">
         <div id="breadcrumbs">
-          <p><span>Расположение: </span><a href="kola.html">Кольский п-ов</a> &gt; <a href="kola2013.html">Восточная Лица</a> &gt; <strong>Статистика</strong>
+          <p>
+            <span>Расположение: </span>
+            <strong></strong>
           </p>
         </div>
         <h1 class="title topictitle1">Трек. Статистика. Легенда</h1>
@@ -124,15 +121,9 @@
         <ul id="quick_links"></ul>
         <h3>Language Links</h3>
         <ul id="inner_navigation">
-          <li class="first">
-            <strong>Вперед:</strong>
-            <a href="kola2013.photo.html">Фотографии</a>
-          </li>
+          <li class="first"><strong>Вперед:</strong>нет</li>
           <li><strong>Назад:</strong>нет</li>
-          <li class="last">
-            <strong>Вверх:</strong>
-            <a href="kola2013.html">Восточная Лица</a>
-          </li>
+          <li class="last"><strong>Вверх:</strong>нет</li>
         </ul>
       </div>
     </div>
