--- a/kola2013.photo.html
+++ b/kola2013.photo.html
@@ -326,7 +326,7 @@
             </div>
           </center>
           <center>
-            <h2>Волок между Печозером и оз. Лице</h2>
+            <h2>Волок между Поросозером и оз. Лице</h2>
             <div>
               <table class="photoFile" cellspacing="10px" id="photo5_middle">
                 <colgroup>
@@ -352,7 +352,7 @@
                           <img src="images/camera.gif">
                         </a>
                       </p>
-                      <a href="http://img-fotki.yandex.ru/get/9092/101174408.8/0_9986d_a3e6ae06_XL.jpg" rel="cbgroup" title="Волок между Печозером и оз. Лице">
+                      <a href="http://img-fotki.yandex.ru/get/9092/101174408.8/0_9986d_a3e6ae06_XL.jpg" rel="cbgroup" title="Волок между Поросозером и оз. Лице">
                         <img class="photo" src="http://img-fotki.yandex.ru/get/9092/101174408.8/0_9986d_a3e6ae06_M.jpg">
                       </a>
                     </td></tr>
@@ -363,7 +363,7 @@
                           <img src="images/camera.gif">
                         </a>
                       </p>
-                      <a href="http://img-fotki.yandex.ru/get/9834/101174408.8/0_9986e_dc914ad9_XL.jpg" rel="cbgroup" title="Волок между Печозером и оз. Лице">
+                      <a href="http://img-fotki.yandex.ru/get/9834/101174408.8/0_9986e_dc914ad9_XL.jpg" rel="cbgroup" title="Волок между Поросозером и оз. Лице">
                         <img class="photo" src="http://img-fotki.yandex.ru/get/9834/101174408.8/0_9986e_dc914ad9_M.jpg">
                       </a>
                     </td>
