--- a/river.html
+++ b/river.html
@@ -175,7 +175,11 @@
             <li class="link ulchildlink"><strong>
                 <a href="sozz.html">Созь</a>
               </strong><br>
-ПВД по реке Созь 25 — 26 мая 2013 г.</li></ul></div></div>
+ПВД по реке Созь 25 — 26 мая 2013 г.</li>
+            <li class="link ulchildlink"><strong>
+                <a href="shana.html">Шаня</a>
+              </strong><br>
+ПВД 29-30 марта 2014 г. по р.Шаня в Калужской области</li></ul></div></div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
