--- a/river.html
+++ b/river.html
@@ -179,7 +179,11 @@
             <li class="link ulchildlink"><strong>
                 <a href="shana.html">Шаня</a>
               </strong><br>
-ПВД 29-30 марта 2014 г. по р.Шаня в Калужской области</li></ul></div></div>
+ПВД 29-30 марта 2014 г. по р.Шаня в Калужской области</li>
+            <li class="link ulchildlink"><strong>
+                <a href="mossea14.html">Московское море</a>
+              </strong><br>
+ПВД 19-20 апреля 2014 г. от ст. Московское море до г. Дубна.</li></ul></div></div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
