--- a/onega.html
+++ b/onega.html
@@ -4,8 +4,8 @@
 
   <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>Московское море</title>
-    <meta name="keywords" content="Андрей Коперский, фотоальбом, Московское море, поход на байдарках, ">
+    <title>Онежское озеро (план)</title>
+    <meta name="keywords" content="Андрей Коперский, фотоальбом, Онежское озеро, поход на байдарках, ">
     <link type="text/css" rel="stylesheet" href="stylesheets/screen_styles.css">
     <link type="text/css" media="screen" rel="stylesheet" href="stylesheets/colorbox.css">
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -22,13 +22,13 @@
 			  });
 		  </script>
     <script type="text/javascript" src="arrays/ltocent2.js"></script>
-    <script type="text/JavaScript">window.pageid = "mossea14.html";</script>
+    <script type="text/JavaScript">window.pageid = "onega.html";</script>
     <link rel="Shortcut Icon" type="image/ico" href="images/favicon.ico">
   </head>
 
 
 
-  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="mossea14">
+  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="onega">
     <div id="container">
       <div id="branding">
         <h1>
@@ -89,32 +89,17 @@
       </div>
       <div id="content_main" class="with-info">
         <div id="breadcrumbs">
-          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Московское море</strong>
+          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Онега</strong>
           </p>
         </div>
-        <h1 class="title topictitle1">Московское море</h1>
+        <h1 class="title topictitle1">Онежское озеро (план)</h1>
         <div class="body photoBody">
-          <p class="shortdesc">ПВД 19-20 апреля 2014 г. от ст. Московское море до г. Дубна.</p>
-          <div class="section storySection">
-            <p class="p">Тривиальная заброска и выброска на электричках: туда с Ленинградского вокзала до ст. Московское море (2 ч), обратно из Дубны до Савеловского вокзала (3 ч).</p>
-            <p class="p">Маршрут составляет 66 км —  два дня средне интенсивной работы. При неблагоприятном встречном ветре можно пройти половину  и уехать на электричке из Конаково.</p>
-            <p class="p">Мне повезло с погодой - солнце и штиль. Вокруг пляжи, много баз отдыха. В  летнее время все это забито народом, а в апреле  - сосновые боры стоят пустые, на песчаных пляжах  не отпечатались ступни отдыхающих и совсем нет комаров. Только в Крапиве-малине энтузиасты собирают парусные катамараны и надувают  рафты.  Прекрасное время для ПВД.</p>
-            <center>
-              <object codebase="http://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab" width="740" height="600">
-                <param name="wmode" value="transparent">
-                <param name="movie" value="http://www.everytrail.com/swf/widget.swf">
-                <param name="FlashVars" value="units=metric&amp;mode=1&amp;tripId=2750232">
-                <embed src="http://www.everytrail.com/swf/widget.swf" quality="high" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer" wmode="transparent" width="740" height="600" FlashVars="units=metric&amp;mode=1&amp;mapType=Hybrid&amp;tripId=2750232"></embed>
-              </object>
-              <br>
-              <a target="_blank" href="http://www.everytrail.com/fullscreen.php?trip_id=2750232">
-                Смотреть карту во весь экран</a>
-            </center></div></div>
+          <p class="shortdesc">Поход по Онежскому озеру с 1 по 8 мая 2014</p></div>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
                                 var disqus_shortname = "teux",
-                                    disqus_identifier = "mossea14",
-                                    disqus_url = "http://www.teux.ru/mossea14.html";
+                                    disqus_identifier = "onega",
+                                    disqus_url = "http://www.teux.ru/onega.html";
                                 (function() {
                                 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
                                 dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
@@ -127,13 +112,10 @@
         <ul id="quick_links"></ul>
         <h3>Language Links</h3>
         <ul id="inner_navigation">
-          <li class="first">
-            <strong>Вперед:</strong>
-            <a href="onega.html">Онега</a>
-          </li>
+          <li class="first"><strong>Вперед:</strong>нет</li>
           <li>
             <strong>Назад:</strong>
-            <a href="shana.html">Шаня</a>
+            <a href="mossea14.html">Московское море</a>
           </li>
           <li class="last">
             <strong>Вверх:</strong>
