--- a/river.html
+++ b/river.html
@@ -183,7 +183,11 @@
             <li class="link ulchildlink"><strong>
                 <a href="mossea14.html">Московское море</a>
               </strong><br>
-ПВД 19-20 апреля 2014 г. от ст. Московское море до г. Дубна.</li></ul></div></div>
+ПВД 19-20 апреля 2014 г. от ст. Московское море до г. Дубна.</li>
+            <li class="link ulchildlink"><strong>
+                <a href="onega.html">Онежское озеро (план)</a>
+              </strong><br>
+Поход по Онежскому озеру с 1 по 8 мая 2014</li></ul></div></div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
