--- a/onega.html
+++ b/onega.html
@@ -4,7 +4,7 @@
 
   <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>Онежское озеро (план)</title>
+    <title>Онежское озеро</title>
     <meta name="keywords" content="Андрей Коперский, фотоальбом, Онежское озеро, поход на байдарках, ">
     <link type="text/css" rel="stylesheet" href="stylesheets/screen_styles.css">
     <link type="text/css" media="screen" rel="stylesheet" href="stylesheets/colorbox.css">
@@ -89,12 +89,24 @@
       </div>
       <div id="content_main" class="with-info">
         <div id="breadcrumbs">
-          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Онега</strong>
+          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Онежское озеро</strong>
           </p>
         </div>
-        <h1 class="title topictitle1">Онежское озеро (план)</h1>
+        <h1 class="title topictitle1">Онежское озеро</h1>
         <div class="body photoBody">
-          <p class="shortdesc">Поход по Онежскому озеру с 1 по 8 мая 2014</p></div>
+          <p class="shortdesc">Поход по Онежскому озеру с 1 по 10 мая 2014 г.</p>
+          <div class="section storySection">
+            <center>
+              <object codebase="http://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab" width="740" height="600">
+                <param name="wmode" value="transparent">
+                <param name="movie" value="http://www.everytrail.com/swf/widget.swf">
+                <param name="FlashVars" value="units=metric&amp;mode=1&amp;tripId=2776265">
+                <embed src="http://www.everytrail.com/swf/widget.swf" quality="high" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer" wmode="transparent" width="740" height="600" FlashVars="units=metric&amp;mode=1&amp;mapType=Hybrid&amp;tripId=2776265"></embed>
+              </object>
+              <br>
+              <a target="_blank" href="http://www.everytrail.com/fullscreen.php?trip_id=2776265">
+                Смотреть карту во весь экран</a>
+            </center></div></div>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
                                 var disqus_shortname = "teux",
