--- a/mossea14.html
+++ b/mossea14.html
@@ -129,7 +129,7 @@
         <ul id="inner_navigation">
           <li class="first">
             <strong>Вперед:</strong>
-            <a href="onega.html">Онега</a>
+            <a href="onega.html">Онежское озеро</a>
           </li>
           <li>
             <strong>Назад:</strong>
