--- a/river.html
+++ b/river.html
@@ -185,9 +185,9 @@
               </strong><br>
 ПВД 19-20 апреля 2014 г. от ст. Московское море до г. Дубна.</li>
             <li class="link ulchildlink"><strong>
-                <a href="onega.html">Онежское озеро (план)</a>
+                <a href="onega.html">Онежское озеро</a>
               </strong><br>
-Поход по Онежскому озеру с 1 по 8 мая 2014</li></ul></div></div>
+Поход по Онежскому озеру с 1 по 10 мая 2014 г.</li></ul></div></div>
       <div id="navigation_supplemental">
         <h3>Quick Navigation</h3>
         <ul id="quick_links"></ul>
