--- a/ladoga14.html
+++ b/ladoga14.html
@@ -4,8 +4,8 @@
 
   <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
-    <title>Ладожское озеро. Валаам</title>
-    <meta name="keywords" content="Андрей Коперский, фотоальбом, Онежское озеро, поход на байдарках, ">
+    <title>Ладожское озеро (план)</title>
+    <meta name="keywords" content="Андрей Коперский, фотоальбом, Ладожское озеро, поход на байдарках, ">
     <link type="text/css" rel="stylesheet" href="stylesheets/screen_styles.css">
     <link type="text/css" media="screen" rel="stylesheet" href="stylesheets/colorbox.css">
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -22,13 +22,13 @@
 			  });
 		  </script>
     <script type="text/javascript" src="arrays/ltocent2.js"></script>
-    <script type="text/JavaScript">window.pageid = "ladoga.html";</script>
+    <script type="text/JavaScript">window.pageid = "ladoga14.html";</script>
     <link rel="Shortcut Icon" type="image/ico" href="images/favicon.ico">
   </head>
 
 
 
-  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="ladoga">
+  <body onload="if (navigator.appName.indexOf('Microsoft')!=-1) window.jstree.OpenTreeNode(window.pageid);" id="ladoga14">
     <div id="container">
       <div id="branding">
         <h1>
@@ -89,29 +89,24 @@
       </div>
       <div id="content_main" class="with-info">
         <div id="breadcrumbs">
-          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Ладожское озеро</strong>
+          <p><span>Расположение: </span><a href="river.html">Водные</a> &gt; <strong>Ладога (план)</strong>
           </p>
         </div>
-        <h1 class="title topictitle1">Ладожское озеро. Валаам</h1>
+        <h1 class="title topictitle1">Ладожское озеро (план)</h1>
         <div class="body photoBody">
-          <p class="shortdesc">Поход по Ладожскому озеру с 7 по 9 мая 2012 г.</p>
+          <p class="shortdesc">Планируемый поход по Ладожскому озеру с 7 по 15 июня 2014 г.</p>
           <div class="section storySection">
             <center>
-              <object codebase="http://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab" width="740" height="600">
-                <param name="wmode" value="transparent">
-                <param name="movie" value="http://www.everytrail.com/swf/widget.swf">
-                <param name="FlashVars" value="units=metric&amp;mode=1&amp;tripId=1571215">
-                <embed src="http://www.everytrail.com/swf/widget.swf" quality="high" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer" wmode="transparent" width="740" height="600" FlashVars="units=metric&amp;mode=1&amp;mapType=Hybrid&amp;tripId=1571215"></embed>
-              </object>
+              <iframe width="100%" height="300px" frameBorder="0" src="http://umap.openstreetmap.fr/en/map/ladoga_9375?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=true&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;datalayersControl=false&amp;onLoadPanel=undefined"></iframe>
               <br>
-              <a target="_blank" href="http://www.everytrail.com/fullscreen.php?trip_id=1571215">
+              <a target="_blank" href="http://umap.openstreetmap.fr/en/map/ladoga_9375">
                 Смотреть карту во весь экран</a>
             </center></div></div>
         <div id="disqus_thread"></div>
         <script type="text/javascript">
                                 var disqus_shortname = "teux",
-                                    disqus_identifier = "ladoga",
-                                    disqus_url = "http://www.teux.ru/ladoga.html";
+                                    disqus_identifier = "ladoga14",
+                                    disqus_url = "http://www.teux.ru/ladoga14.html";
                                 (function() {
                                 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
                                 dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
@@ -124,13 +119,10 @@
         <ul id="quick_links"></ul>
         <h3>Language Links</h3>
         <ul id="inner_navigation">
-          <li class="first">
-            <strong>Вперед:</strong>
-            <a href="ladoga14.html">Ладога (план)</a>
-          </li>
+          <li class="first"><strong>Вперед:</strong>нет</li>
           <li>
             <strong>Назад:</strong>
-            <a href="onega.html">Онежское озеро</a>
+            <a href="ladoga.html">Ладожское озеро</a>
           </li>
           <li class="last">
             <strong>Вверх:</strong>
