Onega umap added

--- a/onega.html
+++ b/onega.html
@@ -97,14 +97,9 @@
           <p class="shortdesc">Поход по Онежскому озеру с 1 по 10 мая 2014 г.</p>
           <div class="section storySection">
             <center>
-              <object codebase="http://fpdownload.macromedia.com/get/flashplayer/current/swflash.cab" width="740" height="600">
-                <param name="wmode" value="transparent">
-                <param name="movie" value="http://www.everytrail.com/swf/widget.swf">
-                <param name="FlashVars" value="units=metric&amp;mode=1&amp;tripId=2776265">
-                <embed src="http://www.everytrail.com/swf/widget.swf" quality="high" type="application/x-shockwave-flash" pluginspage="http://www.adobe.com/go/getflashplayer" wmode="transparent" width="740" height="600" FlashVars="units=metric&amp;mode=1&amp;mapType=Hybrid&amp;tripId=2776265"></embed>
-              </object>
+              <iframe width="100%" height="300px" frameBorder="0" src="http://umap.openstreetmap.fr/en/map/onega_9534?scaleControl=false&amp;miniMap=false&amp;scrollWheelZoom=true&amp;zoomControl=true&amp;allowEdit=false&amp;moreControl=false&amp;datalayersControl=false&amp;onLoadPanel=undefined"></iframe>
               <br>
-              <a target="_blank" href="http://www.everytrail.com/fullscreen.php?trip_id=2776265">
+              <a target="_blank" href="http://umap.openstreetmap.fr/en/map/onega_9534">
                 Смотреть карту во весь экран</a>
             </center></div></div>
         <div id="disqus_thread"></div>
